--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ set(SOURCES
         src/game.c
         src/memo.c
         src/todo.c
+        src/contact.c
 )
 
 # 3. 生成可执行文件 (CMake 会自动根据系统在 Windows 下生成 chatbot.exe，Linux 下生成 chatbot)
